--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: "1.0"
 author: Scroojalix
 api-version: "1.13"
 permission-message: &noperms "\u00A7cYou do not have permission to use this command."
+depend: [PlaceholderAPI]
 
 commands:
   begindebugcountdown:
