--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
       <id>placeholderapi</id>
       <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
     </repository>
+    <repository>
+      <id>spigot-repo</id>
+      <url>https://repo.codemc.io/repository/nms/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -51,7 +55,8 @@
         <configuration>
           <archive>
             <manifest>
-              <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
+              <addDefaultImplementationEntries>
+                false</addDefaultImplementationEntries>
               <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
             </manifest>
           </archive>
@@ -62,7 +67,8 @@
         <artifactId>maven-shade-plugin</artifactId>
         <version>2.4.1</version>
         <configuration>
-          <createDependencyReducedPom>false</createDependencyReducedPom>
+          <createDependencyReducedPom>
+            false</createDependencyReducedPom>
           <shadedArtifactAttached>false</shadedArtifactAttached>
           <outputDirectory>./target/temp-jar</outputDirectory>
         </configuration>
@@ -75,12 +81,14 @@
             <configuration>
               <artifactSet>
                 <includes>
-                  <include>${project.groupId}:${project.artifactId}</include>
+                  <include>
+                    ${project.groupId}:${project.artifactId}</include>
                 </includes>
               </artifactSet>
               <filters>
                 <filter>
-                  <artifact>*:*</artifact>
+                  <artifact>
+                    *:*</artifact>
                   <excludes>
                     <exclude>META-INF/maven/</exclude>
                   </excludes>
@@ -128,7 +136,8 @@
             <version>3.10.1</version>
             <configuration>
               <excludes>
-                <exclude>io/github/scroojalix/countdownapi/Main.java</exclude>
+                <exclude>
+                  io/github/scroojalix/countdownapi/Main.java</exclude>
               </excludes>
             </configuration>
           </plugin>
