--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <groupId>io.github.scroojalix</groupId>
   <artifactId>countdownapi</artifactId>
-  <version>${revision}</version>
+  <version>1.3</version>
 
   <name>CountdownAPI</name>
   <url>https://scroojalix.github.io</url>
@@ -17,8 +17,6 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <author>Scroojalix</author>
-    <!-- Change version here -->
-    <revision>1.3</revision>
   </properties>
 
   <repositories>
