--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
     <revision>1.2</revision>
   </properties>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Scroojalix Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/Scroojalix/CountdownAPI</url>
+    </repository>
+  </distributionManagement>
+
   <repositories>
     <repository>
       <id>placeholderapi</id>
